--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20"
+    "@types/express": "^4.17.20",
+    "tsc": "^2.0.4",
+    "typescript": "^5.2.2"
   }
 }
